# ragdatacollector

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  IMPROVEMENT_ROADMAP.md  README.md  SPEC_COMPLIANCE.md  SUMMARY_FOR_CLIENT.md  TEST_INSTRUCTIONS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  loader.py  settings.yaml
scripts/: debug_cyberleninka.py
src/: __init__.py  app.py  collector.py  db.py  export_ndjson.py  tasks.py
src/models/: __init__.py  api.py  document.py
src/processing/: __init__.py  chunking.py  doi_resolve.py  language.py  pdf_extract.py  text_clean.py  validation.py
src/query/: __init__.py  assistant.py  optimizer.py
src/sources/: __init__.py  arxiv.py  base.py  cinii.py  crossref.py  cyberleninka.py  duckduckgo_serp.py  openalex.py  pubmed.py  registry.py  universal_url.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_crossref_source.py  test_cyberleninka.py  test_export.py  test_processing.py  test_query_optimizer.py  test_text_clean_and_chunk_info.py
