[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-data-collector"
version = "0.1.0"
description = "FastAPI system for collecting data from open sources for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "PyYAML>=6.0.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "langdetect>=1.0.9",
    "tiktoken>=0.5.0",
    "spacy>=3.7.0",
    "fasttext-wheel>=0.9.2",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
